@@ -701,7 +701,7 @@ escid	\\[^ \t\f\r\n]+
   /************************************************************************/
   /* Attributes */
 <V95,V01,V05,S05>{
-    "(*" 		{ yymore(); yy_push_state(ATTRMODE); }
+    "(*"/{ws}*[^)]	{ yymore(); yy_push_state(ATTRMODE); }	// Doesn't match (*)
 }
 
   /************************************************************************/
